--- a/style.css
+++ b/style.css
@@ -1,24 +1,15 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
 }
 
-.container {
-  max-width: 400px;
-  margin: 50px auto;
+.login-container,
+.signup-container {
   padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  max-width: 382px;
 }
 
 .form-group {
   margin-bottom: 20px;
-}
-
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
 }
 
 .form-group input {
@@ -29,14 +20,14 @@ body {
 }
 
 .form-group input[type="submit"] {
-  background-color: #4caf50;
+  background-color: rgba(119, 84, 246, 1);
   color: white;
   border: none;
   cursor: pointer;
 }
 
 .form-group input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: rgba(155, 84, 246, 1);
 }
 
 .error-message {
@@ -64,4 +55,127 @@ th {
   padding: 6px 10px;
   margin-right: 5px;
   cursor: pointer;
+}
+
+.image-container {
+  background-image: url("./images/Rectangle.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+.login-heading,
+.signup-heading {
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 61px;
+
+  color: #000000;
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-input {
+  display: none;
+}
+
+.custom-checkbox {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+  position: relative;
+}
+
+.custom-checkbox::before {
+  content: "";
+  display: block;
+  width: 12px;
+  height: 12px;
+  background-color: transparent;
+  border-radius: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0.2s ease-in-out;
+}
+
+.checkbox-input:checked + .custom-checkbox::before {
+  background-color: rgba(119, 84, 246, 1);
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.checkbox-label {
+  font-size: 14px;
+  margin-left: 8px;
+}
+
+.additional-options {
+  margin-top: 20px;
+}
+
+.additional-options p {
+  margin-bottom: 10px;
+}
+
+.additional-options a {
+  color: rgba(119, 84, 246, 1);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.additional-options a:hover {
+  color: rgba(155, 84, 246, 1);
+}
+
+.social-icons {
+  display: flex;
+  column-gap: 12px;
+  justify-content: center;
+}
+
+.social-icons img {
+  width: 40px;
+  height: 40px;
+}
+
+.continue-with {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.line {
+  flex-grow: 1;
+  height: 1px;
+  background-color: #ccc;
+  margin: 0 10px;
+}
+
+.text {
+  font-size: 12px;
+  color: #555;
+}
+@media only screen and (max-width: 910px) {
+  .image-container {
+    background-size: cover;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .mob-col {
+    display: none;
+  }
+  .mob-col-two {
+    width: 100%;
+    justify-content: center;
+    display: flex;
+  }
 }
