--- a/style/style.css
+++ b/style/style.css
@@ -58,7 +58,7 @@ th {
 }
 
 .image-container {
-  background-image: url("./images/Rectangle.png");
+  background-image: url("../images/Rectangle.png");
   background-size: contain;
   background-repeat: no-repeat;
   height: 100vh;
